[tool.poetry]
name = "InPynamoDB"
version = "4.1.0"
description = "asyncio wrapper of PynamoDB"
authors = ["sunghyun-lee <sunghyunlee@mymusictaste.com>"]

[tool.poetry.dependencies]
python = "^3.6"
pynamodb = "4.1.0"
aiobotocore = "^0.10.3"
async-property = "^0.2.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-asyncio = "^0.10.0"
asynctest = "^0.13.0"
coverage = "^4.5"
mypy = "^0.740.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
